--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon --exec ./node_modules/.bin/babel-node src/server.js",
+    "sequelize_migration": "npx sequelize-cli db:migrate",
+    "sequelize_seeder": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
