--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon --exec ./node_modules/.bin/babel-node src/server.js",
+    "debug": "nodemon --inspect --quiet --exec ./node_modules/.bin/babel-node src/server.js 2>NUL",
     "sequelize_migration": "npx sequelize-cli db:migrate",
     "sequelize_seeder": "npx sequelize-cli db:seed:all",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
